[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Scenes/SpeedwagonA.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon10.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon11.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon12.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon13.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon14.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon15.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon16.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Tileset/Speedwagon1/speedwagon17.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "WagonAccel",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 0.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27, 0.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19, 0.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 22, 7.5 )

[node name="Speedwagon" type="Node2D"]
script = ExtResource( 1 )

[node name="Speedwagon" type="AnimatedSprite" parent="."]
scale = Vector2( 4, 4 )
frames = SubResource( 1 )
animation = "WagonAccel"
frame = 6
playing = true

[node name="StaticBody2D" type="StaticBody2D" parent="Speedwagon"]
collision_layer = 8
collision_mask = 7

[node name="WAGONFLOOR_CollisionShape2D" type="CollisionShape2D" parent="Speedwagon/StaticBody2D"]
position = Vector2( 0, 7.5 )
shape = SubResource( 2 )

[node name="WAGONCEILING_CollisionShape2D" type="CollisionShape2D" parent="Speedwagon/StaticBody2D"]
position = Vector2( 0, -8.5 )
shape = SubResource( 3 )

[node name="EXTERNAL_CEILING_StaticBody2D" type="StaticBody2D" parent="Speedwagon"]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Speedwagon/EXTERNAL_CEILING_StaticBody2D"]
position = Vector2( 0, -11.5 )
shape = SubResource( 4 )

[node name="OPACITY_REDUCE_Area2D" type="Area2D" parent="Speedwagon"]
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Speedwagon/OPACITY_REDUCE_Area2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01
[connection signal="body_entered" from="Speedwagon/OPACITY_REDUCE_Area2D" to="." method="_on_OPACITY_REDUCE_Area2D_body_entered"]
[connection signal="body_exited" from="Speedwagon/OPACITY_REDUCE_Area2D" to="." method="_on_OPACITY_REDUCE_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
